Modify indent edit